# nen-system

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
docs/: architecture.md
docs/adr/: 0001-raylib-for-2d-prototype.md
docs/game-design/: hatsu-runtime-architecture.md  nen-system.md
include/game/: app_state.hpp  attack_system.hpp  game.hpp  game_constants.hpp  particle_system.hpp  persistence.hpp  ui_renderer.hpp  world_renderer.hpp
include/nen/: affinity.hpp  aura_pool.hpp  combat.hpp  hatsu.hpp  hatsu_spec.hpp  log.hpp  nen_event.hpp  nen_system.hpp  quiz.hpp  technique_state.hpp  training.hpp  types.hpp
src/: main.cpp
src/game/: attack_system.cpp  game.cpp  particle_system.cpp  persistence.cpp  ui_renderer.cpp  world_renderer.cpp
src/nen/: affinity.cpp  combat.cpp  hatsu.cpp  hatsu_spec.cpp  log.cpp  nen_system.cpp  quiz.cpp  techniques.cpp  training.cpp
tests/: test_training.cpp
